--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
           <h2 class="visually-hidden features-title">Why Choose Us</h2>
           <ul class="features-list">
             <li class="features-item">
+              <svg class="features-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-description">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +82,9 @@
               </p>
             </li>
             <li class="features-item">
+              <svg class="features-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="features-subtitle">Punctuality</h3>
               <p class="features-description">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +92,9 @@
               </p>
             </li>
             <li class="features-item">
+              <svg class="features-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-description">
                 Research and confirm brands with the strongest digital growth
@@ -93,6 +102,9 @@
               </p>
             </li>
             <li class="features-item">
+              <svg class="features-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -120,6 +132,36 @@
               <div class="team-item-content">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-role">Product Designer</p>
+                <ul class="socials-list">
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -133,6 +175,37 @@
               <div class="team-item-content">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-role">Frontend Developer</p>
+
+                <ul class="socials-list">
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -146,6 +219,36 @@
               <div class="team-item-content">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-role">Marketing</p>
+                <ul class="socials-list">
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -159,6 +262,36 @@
               <div class="team-item-content">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-role">UI Designer</p>
+                <ul class="socials-list">
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="#">
+                      <svg class="socials-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -172,17 +305,19 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-img-6.jpg"
-                alt="Image of Banking App"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
-              <div class="portfolio-subtitle overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/portfolio-img-6.jpg"
+                  alt="Image of Banking App"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <div class="portfolio-subtitle overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Banking App</h3>
@@ -190,35 +325,40 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-img-5.jpg"
-                alt="Image of Cashless Payment"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
-              <div class="portfolio-subtitle overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/portfolio-img-5.jpg"
+                  alt="Image of Cashless Payment"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <div class="portfolio-subtitle overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
               </div>
+
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-category">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-img-4.jpg"
-                alt="Image of Meditation App"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
-              <div class="portfolio-subtitle overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/portfolio-img-4.jpg"
+                  alt="Image of Meditation App"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <div class="portfolio-subtitle overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Meditation App</h3>
@@ -226,17 +366,19 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-img-3.jpg"
-                alt="Image of Taxi Service"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
-              <div class="portfolio-subtitle overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/portfolio-img-3.jpg"
+                  alt="Image of Taxi Service"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <div class="portfolio-subtitle overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Taxi Service</h3>
@@ -244,17 +386,19 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-img-2.jpg"
-                alt="Image of Screen Illustrations"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
-              <div class="portfolio-subtitle overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/portfolio-img-2.jpg"
+                  alt="Image of Screen Illustrations"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <div class="portfolio-subtitle overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
@@ -262,17 +406,19 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-img-1.jpg"
-                alt="Image of Online Courses"
-                width="360"
-                height="300"
-                class="portfolio-image"
-              />
-              <div class="portfolio-subtitle overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+              <div class="portfolio-item-img">
+                <img
+                  src="./images/portfolio-img-1.jpg"
+                  alt="Image of Online Courses"
+                  width="360"
+                  height="300"
+                  class="portfolio-image"
+                />
+                <div class="portfolio-subtitle overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Online Courses</h3>
@@ -287,15 +433,47 @@
     <!-- #region footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo logo--footer"
-          >Web<span class="span-logo">Studio</span></a
-        >
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-        <div class="socials">
-          <p class="footer-title">Social media</p>
+        <div class="footer-content">
+          <a href="./index.html" class="logo logo--footer"
+            >Web<span class="span-logo">Studio</span></a
+          >
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="socials-footer">
+          <p class="socials-footer-title">Social media</p>
+          <ul class="socials-list-footer">
+            <li class="socials-item-footer">
+              <a class="socials-link-footer" href="#">
+                <svg class="socials-icon-footer">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link" href="#">
+                <svg class="socials-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link" href="#">
+                <svg class="socials-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link" href="#">
+                <svg class="socials-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
