--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
           <h2 class="visually-hidden features-title">Why Choose Us</h2>
           <ul class="features-list">
             <li class="features-item">
-              <svg class="features-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-description">
                 Our goal is to identify the business problem to walk away with
@@ -82,9 +84,11 @@
               </p>
             </li>
             <li class="features-item">
-              <svg class="features-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Punctuality</h3>
               <p class="features-description">
                 Bring the key message to the brand's audience for the best price
@@ -92,9 +96,11 @@
               </p>
             </li>
             <li class="features-item">
-              <svg class="features-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-description">
                 Research and confirm brands with the strongest digital growth
@@ -102,9 +108,11 @@
               </p>
             </li>
             <li class="features-item">
-              <svg class="features-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -313,11 +321,11 @@
                   height="300"
                   class="portfolio-image"
                 />
-                <div class="portfolio-subtitle overlay">
+                <p class="portfolio-subtitle overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Banking App</h3>
@@ -333,11 +341,11 @@
                   height="300"
                   class="portfolio-image"
                 />
-                <div class="portfolio-subtitle overlay">
+                <p class="portfolio-subtitle overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
 
               <div class="portfolio-item-content">
@@ -354,11 +362,11 @@
                   height="300"
                   class="portfolio-image"
                 />
-                <div class="portfolio-subtitle overlay">
+                <p class="portfolio-subtitle overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Meditation App</h3>
@@ -374,11 +382,11 @@
                   height="300"
                   class="portfolio-image"
                 />
-                <div class="portfolio-subtitle overlay">
+                <p class="portfolio-subtitle overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Taxi Service</h3>
@@ -394,11 +402,11 @@
                   height="300"
                   class="portfolio-image"
                 />
-                <div class="portfolio-subtitle overlay">
+                <p class="portfolio-subtitle overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
@@ -414,11 +422,11 @@
                   height="300"
                   class="portfolio-image"
                 />
-                <div class="portfolio-subtitle overlay">
+                <p class="portfolio-subtitle overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-item-content">
                 <h3 class="portfolio-name">Online Courses</h3>
@@ -452,23 +460,23 @@
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
-              <a class="socials-link" href="#">
-                <svg class="socials-icon">
+            <li class="socials-item-footer">
+              <a class="socials-link-footer" href="#">
+                <svg class="socials-icon-footer">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
-              <a class="socials-link" href="#">
-                <svg class="socials-icon">
+            <li class="socials-item-footer">
+              <a class="socials-link-footer" href="#">
+                <svg class="socials-icon-footer">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
-              <a class="socials-link" href="#">
-                <svg class="socials-icon">
+            <li class="socials-item-footer">
+              <a class="socials-link-footer" href="#">
+                <svg class="socials-icon-footer">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
