--- a/index.html
+++ b/index.html
@@ -143,28 +143,28 @@
                 <ul class="socials-list">
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -187,28 +187,28 @@
                 <ul class="socials-list">
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -230,28 +230,28 @@
                 <ul class="socials-list">
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -273,28 +273,28 @@
                 <ul class="socials-list">
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item">
                     <a class="socials-link" href="#">
-                      <svg class="socials-icon">
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -455,28 +455,28 @@
           <ul class="socials-list-footer">
             <li class="socials-item-footer">
               <a class="socials-link-footer" href="#">
-                <svg class="socials-icon-footer">
+                <svg class="socials-icon-footer" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item-footer">
               <a class="socials-link-footer" href="#">
-                <svg class="socials-icon-footer">
+                <svg class="socials-icon-footer" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item-footer">
               <a class="socials-link-footer" href="#">
-                <svg class="socials-icon-footer">
+                <svg class="socials-icon-footer" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item-footer">
               <a class="socials-link-footer" href="#">
-                <svg class="socials-icon-footer">
+                <svg class="socials-icon-footer" width="24px" height="24px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
