--- a/index.html
+++ b/index.html
@@ -455,28 +455,28 @@
           <ul class="socials-list-footer">
             <li class="socials-item-footer">
               <a class="socials-link-footer" href="#">
-                <svg class="socials-icon-footer" width="24px" height="24px">
+                <svg class="socials-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item-footer">
               <a class="socials-link-footer" href="#">
-                <svg class="socials-icon-footer" width="24px" height="24px">
+                <svg class="socials-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item-footer">
               <a class="socials-link-footer" href="#">
-                <svg class="socials-icon-footer" width="24px" height="24px">
+                <svg class="socials-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-item-footer">
               <a class="socials-link-footer" href="#">
-                <svg class="socials-icon-footer" width="24px" height="24px">
+                <svg class="socials-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
