--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button">Order Service</button>
+          <button type="button" class="hero-button primary-btn">
+            Order Service
+          </button>
         </div>
       </section>
       <!-- #endregion hero-->
@@ -483,8 +485,69 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-form-title">Subscribe</p>
+          <div class="footer-form-wrap">
+            <input type="email" class="footer-input" placeholder="E-mail" />
+            <button type="button" class="footer-button primary-btn">
+              Subscribe
+              <svg class="footer-input-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- #endregion footer-->
+    <!-- #region modal -->
+    <div class="modal-overlay">
+      <div class="modal">
+        <div class="modal-close-btn">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </div>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <label class="modal-form-input curent"
+            >Name
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+            <input type="text" name="name" />
+          </label>
+          <label class="modal-form-input"
+            >Phone
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+            <input type="tel" name="phone" />
+          </label>
+          <label class="modal-form-input"
+            >Email
+            <svg class="modal-form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+            <input type="email" name="email" />
+          </label>
+          <label class="modal-form-input form-textarea"
+            >Comment
+            <textarea
+              name="message"
+              rows="4"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <label class="checkbox-text">
+            <input type="checkbox" name="consent" id="consent" /> I accept the
+            terms and conditions of the
+            <span class="checkbox-span">Privacy Policy</span>
+          </label>
+          <button type="submit" class="modal-btn primary-btn">Send</button>
+        </form>
+      </div>
+    </div>
+    <!-- #endregion -->
   </body>
 </html>
